# AndroidWithRust

./: .gitignore  README  README.md  cargo-config.toml
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/greetings/: GreetingsActivity.java  GreetingsActivity.kt  RustGreetings.java  RustGreetings.kt
android/app/src/main/res/layout/: activity_greetings.xml
android/gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: lib.rs
